--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /IsEmirleri.Web/appsettings.json
+/IsEmirleri.Web/appsettings.Development.json
