--- a/IsEmirleri.Business/IsEmirleri.Business.csproj
+++ b/IsEmirleri.Business/IsEmirleri.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IsEmirleri.Models\IsEmirleri.Models.csproj" />
     <ProjectReference Include="..\IsEmirleri.Repository\IsEmirleri.Repository.csproj" />
   </ItemGroup>
