Projenin son sürümüne göre uyarlandı.

--- a/IsEmirleri.DTO/IsEmirleri.DTO.csproj
+++ b/IsEmirleri.DTO/IsEmirleri.DTO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IsEmirleri.Models\IsEmirleri.Models.csproj" />
+  </ItemGroup>
+
 </Project>
