--- a/IsEmirleri.Business/IsEmirleri.Business.csproj
+++ b/IsEmirleri.Business/IsEmirleri.Business.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\IsEmirleri.DTO\IsEmirleri.DTO.csproj" />
     <ProjectReference Include="..\IsEmirleri.Models\IsEmirleri.Models.csproj" />
     <ProjectReference Include="..\IsEmirleri.Repository\IsEmirleri.Repository.csproj" />
+    <ProjectReference Include="..\IsEmirleri.Utility\IsEmirleri.Utility.csproj" />
   </ItemGroup>
 
 </Project>
