--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /IsEmirleri.Web/appsettings.json
 /IsEmirleri.Web/appsettings.Development.json
 /IsEmirleri.Web/appsettings.json
+/IsEmirleri.Web/appsettings.json
