--- a/IsEmirleri.Web/IsEmirleri.Web.csproj
+++ b/IsEmirleri.Web/IsEmirleri.Web.csproj
@@ -1,10 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\lib\microsoft-signalr\signalr.js" />
+    <Content Remove="wwwroot\lib\microsoft-signalr\signalr.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\lib\microsoft-signalr\signalr.js" />
+    <None Include="wwwroot\lib\microsoft-signalr\signalr.min.js" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
