Testler yapıldı. Sorunlar düzeltildi.

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /IsEmirleri.Web/appsettings.Development.json
 /IsEmirleri.Web/appsettings.json
 /IsEmirleri.Web/appsettings.json
+/IsEmirleri.Api/appsettings.json
+/IsEmirleri.Api/appsettings.json
