--- a/IsEmirleri.Api/appsettings.json
+++ b/IsEmirleri.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=isEmirleri; Integrated Security=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-CB6V4KQ\\SQLEXPRESS;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
   }
+
 }
