User için SignalR kuruldu.

--- a/IsEmirleri.Api/appsettings.json
+++ b/IsEmirleri.Api/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-CB6V4KQ\\SQLEXPRESS;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
+    "DefaultConnection": "Server=DESKTOP-17L4C0E\\SQLEXPRESS;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
   }
-
 }
