--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ FodyWeavers.xsd
 /IsEmirleri.Web/appsettings.json
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.json
+/IsEmirleri.Api/appsettings.json
