--- a/IsEmirleri.Api/appsettings.Development.json
+++ b/IsEmirleri.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-CB6V4KQ\\SQLEXPRESS;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
   }
+
 }
