Görev süresi kontrolleri için MissionService  method eklemeleri ve düzenlemeleri yapıldı.

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ FodyWeavers.xsd
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.json
+/IsEmirleri.Api/appsettings.Development.json
