Status update edildi.

--- a/IsEmirleri.Web/appsettings.json
+++ b/IsEmirleri.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LTS-Rumeysa;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
+    "DefaultConnection": "Server=DESKTOP-17L4C0E\\SQLEXPRESS;Database=IsEmri; Integrated Security=True; TrustServerCertificate=Yes"
   }
 
 }
