--- a/IsEmirleri.Web/appsettings.json
+++ b/IsEmirleri.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-3V1BM1A\\SQLEXPRESS; Database=IsEmirleri;TrustServerCertificate=True;Integrated Security=True;"
+    "DefaultConnection": "Server=DESKTOP-17L4C0E\\SQLEXPRESS; Database=IsEmri;TrustServerCertificate=True;Integrated Security=True;"
   }
 
 }
