--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,4 @@ FodyWeavers.xsd
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.Development.json
+/IsEmirleri.Web/appsettings.json
