--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ FodyWeavers.xsd
 /IsEmirleri.Api/appsettings.json
 /IsEmirleri.Api/appsettings.Development.json
 /IsEmirleri.Web/appsettings.json
+/IsEmirleri.Web/appsettings.json
