--- a/IsEmirleri.Web/appsettings.json
+++ b/IsEmirleri.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-3V1BM1A\\SQLEXPRESS;Database=IsEmirleri;TrustServerCertificate=True;Integrated Security=True;"
+    "DefaultConnection": "Server=77.245.159.23\\MSSQLSERVER2019;Database=IsEmirleri;user=IsEmirleriDb;password=36e%eyJ81"
   }
 
 }
