--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,4 @@ FodyWeavers.xsd
 /IsEmirleri.Api/appsettings.Development.json
 /IsEmirleri.Web/appsettings.json
 /IsEmirleri.Web/appsettings.json
+/IsEmirleri.Web/appsettings.json
